exports[`test should except a password with 5 chars 1`] = `
Object {
  "data": Object {
    "password": "12345",
  },
}
`;

exports[`test should not except a password with less then 5 chars 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Query error: minimum length of 5 required: ],
  ],
}
`;

exports[`test should not except a password with more than 254 chars 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Query error: maximum length is 254: ],
  ],
}
`;
